--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand --silent",
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "start": ""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/web-sprint-challenge-adding-data-persistence.git"
   },
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.95.7",
+    "sqlite3": "^5.0.2"
+  },
   "devDependencies": {
     "cross-env": "7.0.3",
     "eslint": "7.32.0",
     "jest": "26.6.3",
-    "supertest": "6.1.6"
+    "supertest": "6.1.6",
+    "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.12"
   }
 }
