--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "start": ""
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
