--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "start": "node index.js"
+    "start": "node index.js",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
